fixe background overlapping into body when user zoom the browser

--- a/app/assets/stylesheets/logjam.scss
+++ b/app/assets/stylesheets/logjam.scss
@@ -676,6 +676,7 @@ ul.radio.vertical > li {
         & > ul {
             position:relative;
             top: 4px;
+            background: none;
         }
     }
 }
